assets/styles/header.css
body > main > header {
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-between;
  align-items: flex-start;
  padding-top: 0.5em;
  margin-bottom: 3em;
}

body > main > header > * {
  align-self: center;
}

body > main > header * {
  color: white;
  text-decoration: none;
}

body > main > header > nav {
  align-self: flex-end;
}

body > main > header > nav > * {
  display: inline;
}

@media (max-width: 800px) {
  body > main > header > nav {
    display: none;
  }
}

body > main > header a {
  color: white;
  text-decoration: none;
}

body > main > header a:hover {
  color: white;
  text-decoration: none;
}

body > main > header .title {
  font-size: 4em;
  font-weight: bold;
  margin-top: 0;
  margin-bottom: 2rem;
}

body > main > header .subtitle {
  margin-left: -6em;
  font-size: 1.5em;
  margin-top: -2em;
  margin-bottom: 2rem;
}

body > main > header #logo {
  height: 1.5em;
  vertical-align: middle;
  margin: 0.2em;
}

body > main > header nav p {
  text-transform: uppercase;
  font-size: 28px;
  font-weight: bold;
}

body > main > header nav ul.links {
  list-style: none;
  margin-top: 2rem;
  padding-left: 0.5em;
}

body > main > header nav ul.links li {
  display: inline-block;
  font-size: 1.5em;
  margin: 0.25em;
}

@media (max-width: 500px) {
  body > main > header #logo {
    display: block;
    margin: 0 auto;
  }

  body > main > header h1.title {
    font-size: 1em;
  }
}

@media (max-width: 800px) {
  body > main > header h1.title {
    font-size: 3em;
    display: block;
    text-align: center;
  }

  .subtitle {
    display: none;
  }

  h2 {
    text-align: center;
  }

  body > main > header nav .links {
    display: none;
  }
}

@media (max-width: 500px) {
  body > main > header {
    margin-bottom: 0;
  }

  body > main > header .title {
    font-size: 2em !important;
  }
}

body > main.post > header {
  margin-bottom: 0;
}

body > main.post > header nav {
  display: none;
}

body > main.post > header .title {
  font-size: 4em;
  margin-bottom: 0.5em;
}

body > main.post > header .subtitle {
  display: none;
}

body > main.post > header #logo {
  height: 1em;
  margin-top: 0;
  margin-left: 0;
}

